Fixed the issue of mobile project showing content overflowing when the left nav is available

--- a/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
@@ -14,16 +14,11 @@
 /********************************************************************************
 *************************************** Mobile layouts *********************************
 *********************************************************************************/
-.app-page.mobile-app-page{
+.app-page.mobile-app-page {
   .app-content {
     display: block;
-    overflow: hidden;
-    min-height: 0!important;
-
     .app-content-row {
       display: block;
-      overflow: hidden;
-
       .app-content-column {
         display: block;
         overflow: auto;
@@ -31,14 +26,9 @@
     }
   }
   .app-mobile-navbar {
-    &+.app-content {
+    & + .app-content {
       .calc('height', ~"calc( 100% - @{app-mobile-nav-height} )") !important;
       margin: 0;
-      min-height: 0!important;
-      display: block;
-      .app-content-row {
-        min-height: 0 !important;
-      }
     }
   }
   &.has-tabbar {
