--- a/src/main/webapp/styles/less/wm-mobile-widgets.less
+++ b/src/main/webapp/styles/less/wm-mobile-widgets.less
@@ -10,7 +10,7 @@
     left: 0;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 1000;
     overflow: hidden;
     .app-icon {
       width: auto;
@@ -28,7 +28,7 @@
   }
   .app-segments-container {
     .width-height();
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
     > ul {
       .width-height();
